# RepoWraith

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: 1_product_vision.md  2_swot_analysis.md  3_use_case.md  4_architecture.md  5_system_context.md  6_requirements.md
repollama/: cli.py  config.py  embed.py  errors.py  llm.py  models.py  ollama.py  prompt.py  rerank.py  retrieve.py  splitter.py  store.py  survey.py  system_prompt.txt
repowraith/: cli.py  config.py  embed.py  errors.py  llm.py  models.py  ollama.py  prompt.py  prompt_template.txt  rerank.py  retrieve.py  schema.py  splitter.py  store.py  survey.py  system_prompt.txt
tests/: helpers.py  test_cli.py  test_embed.py  test_llm.py  test_ollama.py  test_prompt.py  test_rerank.py  test_retrieve.py  test_splitter.py  test_store.py  test_survey.py
tests/integration/: e2e.py  test_e2e.py
