[project]
name = "repollama"
version = "0.1.0"
description = "A local archivist for your codebase. Index repositories and answer questions using semantic search and local LLMs."
readme = "README.md"
requires-python = ">=3.10"

authors = [{ name = "Lisa Steven" }]

dependencies = ["requests"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
repollama = "repollama.cli:main"

[tool.pytest.ini_options]
markers = [
    "integration: requires Ollama to be running (deselect with -m 'not integration')",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
